samples/_failures_safe/1761792021_85d3ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfe1920e.c: In function ‘main’:
./samples/SAFE/__tmp_bfe1920e.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_bfe1920e.c:200:9: error: expected declaration or statement at end of input
